added _layout.scss and font related changes

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
                     <li><a href="#social">Social</a></li>
                     <li><a href="#projects">Projects</a></li>
                 </ul> -->
+
                 <ul class="row right span-20 gutter-5 nav-header horizontal-list">
                     <li>
                         <a target="_blank" href="http://www.facebook.com/gggauravr">
@@ -66,7 +67,7 @@
                 
                 <div class="row left span-60 gutter-5 main-content">
                     <section>
-                    <h2>About Me</h2>
+                    <h3 class="heading">About Me</h3>
                     <p id="about">
                         My name is <span class="imp">Gaurav Ramesh</span>, and I'm a Computer Science graduate student at <span class="imp">The Ohio State University</span>.
                         My technical interests include <span class="imp">Statistics, Data Mining and building Javascript Webapps</span> and have recently grown keen on
@@ -75,7 +76,7 @@
                     </section>
 
                     <section>
-                    <h2>Academics</h2>
+                    <h3 class="heading">Academics</h3>
                     <p id="academics">
                         Did my undergrad(B.E, 2007-11) in Computer Science, from <span class="imp">Jawaharlal Nehru National College of Engineering(JNNCE)</span>, Shimoga, Karnataka, India.
                         <br>
@@ -90,10 +91,10 @@
                     </p>
                     </section>
                     <section>
-                        <h2>Projects</h2>
+                        <h3 class="heading">Projects</h3>
                         <ul id="projects">
                             <li class="project">
-                                <h4>HashAround: A Twitter and Google-Maps API mashup</h4>
+                                <h4 class="sub-heading">HashAround: A Twitter and Google-Maps API mashup</h4>
                                 <p>
                                     A webapp built in the OSU Hackathon Autumn '13, that gives the latest tweets about(using hashes used in the tweets) and from the place(using geo-location provided by Twitter API), selected on the map.
                                 </p><br>
@@ -109,7 +110,7 @@
                                 </p>
                             </li>
                             <li class="project">
-                                <h4>K-Nearest Neighbor Classifier for Semeion Digits-Dataset</h4>
+                                <h4 class="sub-heading">K-Nearest Neighbor Classifier for Semeion Digits-Dataset</h4>
                                 <p>
                                    Tried out K-Nearest Classifier classifier for digit recognition, trained on the Semeion Dataset, from UCI repos.
                                    It's a basic version of knn using 5 neighbors, and the objective was to learn features and usage of pandas DataFrames,
@@ -121,13 +122,13 @@
                                         <li>Modules : numpy, pandas, sklearn, pyplot</li>
                                     </ul>
                                    
-                                   URL : <a target="_blank" href="https://github.com/ggauravr/knn-digit-classifier/tree/gh-pages" class="limelink">http://github.com/ggauravr/knn-digit-classifier</a>
+                                   URL : <a target="_blank" href="https://www.gramesh.me/knn-digit-classifier" class="limelink">http://github.com/ggauravr/knn-digit-classifier</a>
                                 </p>
                             </li>
                         </ul>
                     </section>
                     <section>
-                    <h2>Professional Experience</h2>
+                    <h3 class="heading">Professional Experience</h3>
                     <p id="profession">
                         I worked for two years(2011-13, at Tally Solutions, Langoor Digital and iStream in that order) in Bangalore as a <span class="imp">Web Developer((front|back)end) and Software Engineer</span>, building <span class="imp">JS webapps with mostly PHP backends</span> and <span class="imp">HTML5 mobile apps</span>
 
