changed project links.. to the domain/project-name format

--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,8 @@
                                     </ul>
 
                                     URL : <a target="_blank" class="limelink" href="http://www.hash-around.appspot.com">http://www.hash-around.appspot.com</a>
+                                    <br/>
+                                    Source Code URL : <a target="_blank" class="limelink" href="http://www.gramesh.me/tweet-news">http://www.gramesh.me/tweet-news</a>
                                 </p>
                             </li>
                             <li class="project">
@@ -122,7 +124,7 @@
                                         <li>Modules : numpy, pandas, sklearn, pyplot</li>
                                     </ul>
                                    
-                                   URL : <a target="_blank" href="https://www.gramesh.me/knn-digit-classifier" class="limelink">http://github.com/ggauravr/knn-digit-classifier</a>
+                                   URL : <a target="_blank" href="http://www.gramesh.me/knn-digit-classifier" class="limelink">http://www.gramesh.me/knn-digit-classifier</a>
                                 </p>
                             </li>
                         </ul>
